# password-manager-desktop-wx-cxx

./: CMakeLists.txt  CodeManager.project  README.md
src/: main.cpp
src/ctrl/: dataexchange.cpp  dataexchange.h  maindata.cpp  maindata.h  secure.cpp  secure.h
src/elements/: textctrl.cpp  textctrl.h
src/panel/: basepanel.cpp  basepanel.h  panel.cpp  panel.h  settingspage.cpp  settingspage.h
src/rc/: res.rc
src/tools/: cipher.cpp  cipher.h  file.cpp  file.h  jnidisk.cpp  jnidisk.h
src/ui/mainframe/: mainframe.cpp  mainframe.h
